# DotDash

./: .gitignore  README.md  main.c  makefile  meson.build
include/: activation.h  alphabet.h  callbacks.h  telegraf-alphabet.h  telegraf-css.h  telegraf-init.h  telegraf-widget-init.h
source/: activation.c  alphabet.c  callbacks.c  main.c  telegraf-alphabet.c  telegraf-init.c
src/: main.c  telegraf-alphabet.c  telegraf-css.c  telegraf-init.c
